--- a/project/drinks/templates/drinks/includes/drinks_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_list.html
@@ -1,3 +1,5 @@
+{% if items %}
+
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
@@ -14,7 +16,7 @@
         {% ifchanged item.date|date:"F" %}{% if not forloop.first %}<tr><td colspan="4" class="table-active"></td></tr>{% endif %}
         {% endifchanged %}
         <tr data-url="{{ url_update }}" class="dblclick">
-            <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
+            <td class="text-start">{{ item.date|date:"Y-m-d" }}</td>
             <td>{{ item.quantity }}</td>
             <td class="text-center no-right-border">
                 <a type="button" data-url="{{ url_update }}" class=" js-create edit" title="Edit"><i class="bi bi-pencil-fill"></i></a>
@@ -23,10 +25,14 @@
                 <a type="button" data-url="{{ url_delete }}" class="js-delete trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
             </td>
         </tr>
-        {% empty %}
-        <tr class="table-warning text-center">
-            <td colspan="4" class="py-2"><b>{{ request.user.year|title }}</b> metais įrašų nėra.</td>
-        </tr>
         {% endfor %}
     </tbody>
 </table>
+
+{% else %}
+
+<div class="mx-auto bg-warning text-center py-2">
+    <b>{{ request.user.year|title }}</b> metais įrašų nėra.
+</div>
+
+{% endif %}
