--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -1,6 +1,8 @@
 {% load humanize %}{% load colorize %}{% load static %}
-<script type="text/javascript" src="{% static 'js/sticky-table-headers.js' %}"></script>
 
+{% if items %}
+
+<script type="text/javascript" src="{% static 'js/sticky-table-headers.js' %}"></script>
 <table class="table table-hover stats sticky-table">
     <thead class="thead-light">
         <tr class="top">
@@ -37,10 +39,6 @@
                     <a type="button" data-url="{{ url_delete }}" class="js-delete trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
                 </td>
         </tr>
-        {% empty %}
-        <tr class="table-warning text-center">
-            <td colspan="10" class="py-2"><b>{% if notice %}{{ notice }}{% else %}{{ request.user.year|title }}</b> metais išlaidų nėra.{% endif %}</td>
-        </tr>
         {% endfor %}
     </tbody>
 </table>
@@ -74,3 +72,11 @@
 </style>
 
 <script>$('.sticky-table').stickyTableHeaders();</script>
+
+{% else %}
+
+<div class="mx-auto bg-warning text-center py-2">
+    {% if notice %}{{ notice|safe }}{% else %}<b>{{ request.user.year|title }}</b> metais įrašų nėra.{% endif %}
+</div>
+
+{% endif %}
