--- a/project/transactions/templates/transactions/index.html
+++ b/project/transactions/templates/transactions/index.html
@@ -5,14 +5,14 @@
 
 {% block content %}
 
-<div class="row mt-2 px-2">
+<div class="row mt-1 px-2">
     <div class="col-lg-8 px-1">
         <!-- transactins between accounts -->
-        <div class="row mt-2">
+        <div class="row mt-3">
             <div class="col">
                 <h6>Sąskaita &hArr; Sąskaita</h6>
             </div>
-            <div class="col text-right">
+            <div class="col text-end">
                 {% url 'transactions:transactions_new' as url_transactions %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_transactions }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
@@ -26,7 +26,7 @@
             <div class="col">
                 <h6>Fondas &rArr; Sąskaita</h6>
             </div>
-            <div class="col text-right">
+            <div class="col text-end">
                 {% url 'transactions:savings_close_new' as url_savings_close %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_savings_close }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
@@ -40,7 +40,7 @@
             <div class="col">
                 <h6>Fondas &hArr; Fondas</h6>
             </div>
-            <div class="col text-right">
+            <div class="col text-end">
                 {% url 'transactions:savings_change_new' as url_savings_change %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_savings_change }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
@@ -52,16 +52,16 @@
 
     <!-- left side -->
     <div class="col-lg-4">
-        <div class="row mt-2">
+        <div class="row mt-3">
             <div class="col-lg-2">
                 <h6>&nbsp;</h6>
             </div>
-            <div class="col-lg-10 px-2 text-right">
+            <div class="col-lg-10 px-2 text-end">
                 {% url 'accounts:accounts_new' as url_accounts %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_accounts }}"><i class="bi bi-plus"></i> Sąskaitą</button>
             </div>
         </div>
-        <div class="row mt-2">
+        <div class="row">
             <div id="ajax-content-categories" class="col-lg-12 px-2">{{ categories }}</div>
         </div>
     </div>
