--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -14,7 +14,7 @@
 {% url 'expenses:expenses_name_new' as url_expenses_name_new %}
 <div class="row mt-2 px-2">
     <div class="col-lg-8 px-1">
-        <div class="row mt-2 mb-3">
+        <div class="row my-2">
             <div class="col-sm-10">
             {% for m in context_months %}
                 {% with m|date:'n' as m_num %}
@@ -28,12 +28,17 @@
             </div>
         </div>
 
-        <div id="search_form_data" class="mt-4">{{ search }}</div>
-        <div id="expenses_list">{{ expenses_list }}</div>
+        <div class="row">
+            <div id="search_form_data" class="col">{{ search }}</div>
+        </div>
+
+        <div class="row">
+            <div id="expenses_list" class="col mt-2">{{ expenses_list }}</div>
+        </div>
     </div>
 
     <div class="col-lg-4">
-        <div class="row mt-2 mb-3">
+        <div class="row my-2">
             <div class="col-lg-12 px-2 text-end">
                 <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_expenses_type_new }}"><i class="bi bi-plus"></i>Išlaidų rūšį</button>
                 <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_expenses_name_new }}"><i class="bi bi-plus"></i>Išlaidų pavadinimą</button>
