--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -12,7 +12,7 @@
 
 {% url 'incomes:incomes_new' as url_incomes %}
 {% url 'incomes:incomes_type_new' as url_incomes_type_new %}
-<div class="row px-2">
+<div class="row mt-1 px-2">
     <div class="col-lg-8 px-1">
         <div class="row my-2">
             <div class="col" id="search_form_data">{{ search }}</div>
@@ -20,28 +20,31 @@
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_incomes }}"><i class="bi bi-plus"></i>Pajamas</button>
             </div>
         </div>
-        <div id="ajax-content">{{ incomes }}</div>
+        <div class="row">
+            <div id="ajax-content" class="col">{{ incomes }}</div>
+        </div>
     </div>
 
     <div class="col-lg-4">
-        <div class="row mt-2 incomes-types-col">
+        <div class="row mt-2">
             <div class="col-lg-12 px-2 text-end">
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_incomes_type_new }}"><i class="bi bi-plus"></i>Pajamų rūšį</button>
             </div>
         </div>
 
-        <div class="row">
-            <div id="ajax-content-categories" class="col-lg-12 px-2">{{ categories }}</div>
+        <div class="row incomes-types-col">
+            <div id="ajax-content-categories" class="col px-2">{{ categories }}</div>
         </div>
     </div>
 </div>
 
 <style>
     .incomes-types-col {
-        margin-bottom: 1.1rem;
+        margin-top: .6rem;
     }
 </style>
 
 {% include 'modal.html' %}
+
 <script type="text/javascript" src="{% static 'js/search.js' %}"></script>
 {% endblock content %}
