--- a/project/savings/templates/savings/index.html
+++ b/project/savings/templates/savings/index.html
@@ -10,57 +10,59 @@
 {% url 'savings:savings_type_new' as url_savings_type_new %}
 {% url 'pensions:pensions_new' as url_pensions %}
 {% url 'pensions:pensions_type_new' as url_pensions_type_new %}
-<div class="row mt-2 px-2">
+<div class="row mt-1 px-2">
     <div class="col-lg-8 px-1">
         <!-- Funds -->
-        <div class="row mt-2">
-            <div class="col text-right">
+        <div class="row my-2">
+            <div class="col">
+                <h6 class="py-1 my-0">Fondai</h6>
+            </div>
+            <div class="col text-end">
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_savings }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
-        <div class="row mt-2">
+        <div class="row">
             <div id="ajax-content" class="col">{{ savings }}</div>
         </div><!-- End Funds -->
 
         <!-- Pensions -->
-        <div class="row mt-2">
-            <div class="col text-right">
+        <div class="row my-2">
+            <div class="col">
+                <h6 class="py-1 my-0">Pensija, II pakopa</h6>
+            </div>
+            <div class="col text-end">
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_pensions }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
-        <div class="row mt-2">
+        <div class="row">
             <div id="pension-content" class="col">{{ pension }}</div>
         </div><!-- End Pensions -->
     </div>
 
     <div class="col-lg-4">
         <!-- Funds Types -->
-        <div class="row mt-2">
-            <div class="col-lg-12 px-2 text-right">
+        <div class="row my-2">
+            <div class="col text-end">
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_savings_type_new }}"><i class="bi bi-plus"></i> Fondą</button>
             </div>
         </div>
-        <div class="row mt-2">
+        <div class="row">
             <div id="ajax-content-categories" class="col-lg-12 px-2">{{ categories }}</div>
         </div>
         <!-- End Funds Types -->
 
         <!-- Pension Types -->
-        <div class="row mt-4">
-            <div class="col-lg-12 px-2 text-right">
+        <div class="row mt-4 mb-2">
+            <div class="col text-end">
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_pensions_type_new }}"><i class="bi bi-plus"></i> Pensijų fondą</button>
             </div>
         </div>
-        <div class="row mt-2">
+        <div class="row">
             <div id="pension-categories" class="col-lg-12 px-2">{{ pension_type }}</div>
         </div>
         <!-- End Pension Types -->
     </div>
 </div>
 
-<div class="modal fade" id="modal-form">
-    <div class="modal-dialog modal-md">
-        <div class="modal-content"></div>
-    </div>
-</div>
+{% include 'modal.html' %}
 {% endblock content %}
