--- a/project/transactions/templates/transactions/index.html
+++ b/project/transactions/templates/transactions/index.html
@@ -8,55 +8,52 @@
 <div class="row mt-1 px-2">
     <div class="col-lg-8 px-1">
         <!-- transactins between accounts -->
-        <div class="row mt-3">
+        <div class="row my-2">
             <div class="col">
-                <h6>Sąskaita &hArr; Sąskaita</h6>
+                <h6 class="py-1 my-0">Sąskaita &hArr; Sąskaita</h6>
             </div>
             <div class="col text-end">
                 {% url 'transactions:transactions_new' as url_transactions %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_transactions }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
-        <div class="row mt-2">
+        <div class="row">
             <div id="transactions_list" class="col">{{ transactions }}</div>
         </div>
 
         <!-- close savings -->
-        <div class="row mt-2">
+        <div class="row my-2">
             <div class="col">
-                <h6>Fondas &rArr; Sąskaita</h6>
+                <h6 class="py-1 my-0">Fondas &rArr; Sąskaita</h6>
             </div>
             <div class="col text-end">
                 {% url 'transactions:savings_close_new' as url_savings_close %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_savings_close }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
-        <div class="row mt-2">
+        <div class="row">
             <div id="savings_close_list" class="col">{{ savings_close }}</div>
         </div>
 
         <!-- change savings -->
-        <div class="row mt-2">
+        <div class="row my-2">
             <div class="col">
-                <h6>Fondas &hArr; Fondas</h6>
+                <h6 class="py-1 my-0">Fondas &hArr; Fondas</h6>
             </div>
             <div class="col text-end">
                 {% url 'transactions:savings_change_new' as url_savings_change %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_savings_change }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
-        <div class="row mt-2">
+        <div class="row">
             <div id="savings_change_list" class="col-lg-12">{{ savings_change }}</div>
         </div>
     </div>
 
     <!-- left side -->
     <div class="col-lg-4">
-        <div class="row mt-3">
-            <div class="col-lg-2">
-                <h6>&nbsp;</h6>
-            </div>
-            <div class="col-lg-10 px-2 text-end">
+        <div class="row my-2">
+            <div class="col px-2 text-end">
                 {% url 'accounts:accounts_new' as url_accounts %}
                 <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_accounts }}"><i class="bi bi-plus"></i> Sąskaitą</button>
             </div>
@@ -67,10 +64,5 @@
     </div>
 </div>
 
-<!-- modal form -->
-<div class="modal fade" id="modal-form">
-    <div class="modal-dialog modal-md">
-        <div class="modal-content"></div>
-    </div>
-</div>
+{% include 'modal.html' %}
 {% endblock content %}
