in search template disabled automated crispy forms mb-3

--- a/project/core/templates/core/includes/search_form.html
+++ b/project/core/templates/core/includes/search_form.html
@@ -16,4 +16,8 @@
         width: 3.65rem;
         margin-top: 0.1rem!important;
     }
+
+    #div_id_search {
+        margin-bottom: 0!important;
+    }
 </style>
