--- a/project/savings/templates/savings/includes/savings_type_list.html
+++ b/project/savings/templates/savings/includes/savings_type_list.html
@@ -1,10 +1,22 @@
-<div class="list-group mb-2">
-    <div class="list-group-item list-group-item-action list-group-item-primary">Fondai</div>
-    {% for item in items %}
-    {% url 'savings:savings_type_update' item.id as url_update %}
-    <div class="list-group-item list-group-item-action dblclick" data-url="{{ url_update }}">
-        {% if item.closed %}<strike>{{ item.title }}</strike> <i>uždaryta {{ item.closed|safe }}</i>{% else %}{{ item.title }}{% endif %}
-        <span style="position: absolute; top: .25rem; right: 5px; display: block;"><a type="button" data-url="{{ url_update }}" class="js-create" title="Edit"><i class="bi bi-pencil-fill edit"></i></a>
+<div class="accordion" id="accordion">
+    <div class="accordion-item">
+        <div class="accordion-header" id="heading_1">
+            <button class="accordion-button collapsed btn-sm rounded-top" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapse_1" aria-expanded="false" aria-controls="collapse_1">Fondai</button>
+        </div>
+        <div id="collapse_1" class="accordion-collapse collapse show" aria-labelledby="heading_1"
+            data-bs-parent="#accordion">
+            <div class="accordion-body">
+                {% for item in items %}
+                {% url 'savings:savings_type_update' item.id as url_update %}
+                <div class="list-group-item" data-url="{{ url_update }}">
+                    {% if item.closed %}<strike>{{ item.title }}</strike> <i>uždaryta {{ item.closed|safe }}</i>{% else %}{{ item.title }}{% endif %}
+                    <span style="position: absolute; top: 0.25rem; right: 5px; display: block;">
+                        <button type="button" data-url="{{ url_update }}" class="btn btn-super-sm edit js-create"><i class="bi bi-pencil-fill"></i></button>
+                    </span>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
-    {% endfor %}
 </div>
