--- a/project/accounts/templates/accounts/includes/accounts_list.html
+++ b/project/accounts/templates/accounts/includes/accounts_list.html
@@ -1,14 +1,14 @@
-<div class="accordion" id="accounts_accordion">
-    <div class="accordion-item my-2">
+<div class="accordion" id="accordion">
+    <div class="accordion-item">
         <div class="accordion-header" id="heading_1">
             <button class="accordion-button collapsed btn-sm rounded-top" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapse_1" aria-expanded="false" aria-controls="collapse_1">Sąskaitos</button>
         </div>
-        <div id="collapse_1" class="accordion-collapse collapse show" aria-labelledby="heading_1" data-bs-parent="#accounts_accordion">
-            <div class="accordion-body m-0 p-0">
+        <div id="collapse_1" class="accordion-collapse collapse show" aria-labelledby="heading_1" data-bs-parent="#accordion">
+            <div class="accordion-body">
                 {% for item in items %}
                 {% url 'accounts:accounts_update' item.id as url_update %}
-                <div class="list-group-item" data-url="{{ url_name_update }}">
+                <div class="list-group-item" data-url="{{ url_update }}">
                     {% if item.closed %}<strike>{{ item.title }}</strike> <i>uždaryta {{ item.closed|safe }}</i>{% else %}{{ item.title }}{% endif %}
                     <span style="position: absolute; top: 0.25rem; right: 5px; display: block;">
                         <button type="button" data-url="{{ url_update }}" class="btn btn-super-sm edit js-create"><i class="bi bi-pencil-fill"></i></button>
