--- a/project/bookkeeping/templates/bookkeeping/includes/spending_info.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/spending_info.html
@@ -4,8 +4,8 @@
     <thead class="thead-light">
         <tr class="top">
             <th></th>
-            <th class="text-right">Planas</th>
-            <th class="text-right">Faktas</th>
+            <th class="text-end">Planas</th>
+            <th class="text-end">Faktas</th>
         </tr>
     </thead>
     <tbody>
