--- a/project/bookkeeping/templates/bookkeeping/includes/year_balance_short.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/year_balance_short.html
@@ -2,9 +2,9 @@
 <table class="table table-striped table-hover table-sm stats">
     <thead>
         <tr class="top">
-            <th class="text-right">Metų pradžioje</th>
-            <th class="text-right">Metų pabaigoje</th>
-            <th class="text-right">Metų balansas</th>
+            <th class="text-end">Metų pradžioje</th>
+            <th class="text-end">Metų pabaigoje</th>
+            <th class="text-end">Metų balansas</th>
         </tr>
     </thead>
     <tfoot>
