--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -16,7 +16,7 @@
 <div class="loader loader-default" id="loader"></div>
 
 <div class="row my-3">
-    <div class="col-2 text-left" id="search_form_data">{{ search }}</div>
+    <div class="col-2 text-start" id="search_form_data">{{ search }}</div>
 
     <div class="col text-center" id="info_row">{{ info_row }}</div>
 
