--- a/project/core/templates/core/includes/search_form.html
+++ b/project/core/templates/core/includes/search_form.html
@@ -6,7 +6,7 @@
         {{ form.search|as_crispy_field }}
     </div>
     <div class="col-auto align-self-start">
-        <input type="submit" name="search" value="Search" id="search_btn" class="btn btn-secondary btn-sm search_click text-right my-auto" data-url="{{ url }}">
+        <input type="submit" name="search" value="Search" id="search_btn" class="btn btn-secondary btn-sm search_click text-end my-auto" data-url="{{ url }}">
     </div>
 </form>
 
