--- a/project/drinks/templates/drinks/includes/drinks_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_list.html
@@ -4,7 +4,7 @@
     <thead class="thead-light">
         <tr class="top">
             <th>Data</th>
-            <th class="text-right">Kiekis</th>
+            <th class="text-end">Kiekis</th>
             <th width="35rem" class="no-right-border"></th>
             <th width="35rem" class="no-left-border"></th>
         </tr>
