--- a/project/drinks/templates/drinks/includes/drinks_target_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_target_list.html
@@ -2,9 +2,9 @@
     <thead class="thead-light">
         <tr class="top-text"><th colspan="3">Max per dieną</th></tr>
         <tr class="top">
-            <th class="text-right">ml</th>
-            <th class="text-right">vnt</th>
-            <th class="text-right"></th>
+            <th class="text-end">ml</th>
+            <th class="text-end">vnt</th>
+            <th class="text-end"></th>
         </tr>
     </thead>
     <tfoot>
