--- a/project/drinks/templates/drinks/includes/tbl_alcohol.html
+++ b/project/drinks/templates/drinks/includes/tbl_alcohol.html
@@ -2,7 +2,7 @@
     <thead class="thead-light">
         <tr class="top-text"><th>C<sub>2</sub>H<sub>5</sub>OH</th></tr>
         <tr class="top">
-            <th class="text-right">Litrai</th>
+            <th class="text-end">Litrai</th>
         </tr>
     </thead>
     <tfoot>
