--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -9,11 +9,11 @@
             <th>Data</th>
             <th>Išlaidų rūšis</th>
             <th>Išlaidų pavadinimas</th>
-            <th class="text-right">Kiekis</th>
-            <th class="text-right">Kaina</th>
+            <th class="text-end">Kiekis</th>
+            <th class="text-end">Kaina</th>
             <th width="260rem">Pastaba</th>
-            <th width="70rem" class="text-right">Prisegtukas</th>
-            <th class="text-right">Sąskaita</th>
+            <th width="70rem" class="text-end">Prisegtukas</th>
+            <th class="text-end">Sąskaita</th>
             <th width="35rem" class="no-right-border"></th>
             <th width="25rem" class="no-left-border no-right-border"></th>
         </tr>
