--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -85,7 +85,7 @@ tr.total th {
     text-align: left!important;
 }
 
-.top > th.text-right {
+.top > th.text-end {
     text-align: right!important;
 }
 
