--- a/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
@@ -6,12 +6,12 @@
             <th colspan="7"><h1>Sąskaitos</h1></th>
         </tr>
         <tr>
-            <th class="text-left">Sąskaita</th>
+            <th class="text-start">Sąskaita</th>
             <th>01.01</th>
             <th>Pajamos</th>
             <th>Išlaidos</th>
             <th>Likutis</th>
-            <th class="text-right bl">Turiu</th>
+            <th class="text-end bl">Turiu</th>
             <th>Delta</th>
 
         </tr>
@@ -19,7 +19,7 @@
     <tbody>
         {% for item in accounts %}
         <tr>
-            <td data-toggle="tooltip" data-html="true" data-placement="right" title="{{ item.latest_check }}" class="text-left"><div style="position:relative;">{{ item.title }}<span style="position: absolute; top: -0.5px; right: 5px; display: block;"><button type="button" data-url="{% url 'bookkeeping:accounts_worth_reset' item.account_pk %}" class="btn btn-super-sm btn-outline-info reset">Reset</button></span></div></td>
+            <td data-toggle="tooltip" data-html="true" data-placement="right" title="{{ item.latest_check }}" class="text-start"><div style="position:relative;">{{ item.title }}<span style="position: absolute; top: -0.5px; right: 5px; display: block;"><button type="button" data-url="{% url 'bookkeeping:accounts_worth_reset' item.account_pk %}" class="btn btn-super-sm btn-outline-info reset">Reset</button></span></div></td>
             {% cell item.past width='110rem' %}
             {% cell item.incomes width='110rem' %}
             {% cell item.expenses width='110rem' %}
@@ -31,7 +31,7 @@
     </tbody>
     <tfoot>
         <tr  class="total">
-            <th class="text-left">Viso</th>
+            <th class="text-start">Viso</th>
             {% cell total_row.past tag="th" %}
             {% cell total_row.incomes tag="th" %}
             {% cell total_row.expenses tag="th" %}
