--- a/project/drinks/templates/drinks/includes/tbl_std_av.html
+++ b/project/drinks/templates/drinks/includes/tbl_std_av.html
@@ -4,16 +4,16 @@
         <tr class="top-text"><th colspan="5">Vidutiniškai suvartojamas Std AV</th></tr>
         <tr class="top">
             <th></th>
-            <th class="text-right">Viso</th>
-            <th class="text-right">Per dieną</th>
-            <th class="text-right">Per savaitę</th>
-            <th class="text-right">Per mėnesį</th>
+            <th class="text-end">Viso</th>
+            <th class="text-end">Per dieną</th>
+            <th class="text-end">Per savaitę</th>
+            <th class="text-end">Per mėnesį</th>
         </tr>
     </thead>
     <tbody>
         {% for item in items %}
         <tr {% if 'AV' in item.title %}class="table-warning bor"{% endif %}>
-            <td class="text-left" style="padding-left: 1rem!important;">{{ item.title }}</td>
+            <td class="text-start" style="padding-left: 1rem!important;">{{ item.title }}</td>
             {% cell item.total %}
             {% cell item.per_day %}
             {% cell item.per_week %}
