--- a/project/pensions/templates/pensions/index.html
+++ b/project/pensions/templates/pensions/index.html
@@ -11,7 +11,7 @@
 <div class="row mt-2">
     <div class="col-lg-8">
         <div class="row my-2">
-            <div class="col text-right">
+            <div class="col text-end">
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_pensions }}"><i class="fas fa-plus"></i> Pajamas</button>
             </div>
         </div>
@@ -19,7 +19,7 @@
     </div>
     <div class="col-lg-4">
         <div class="row my-2">
-            <div class="col text-right">
+            <div class="col text-end">
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_pensions_type_new }}"><i class="fas fa-plus"></i> Pajamų rūšį</button>
             </div>
         </div>
