--- a/project/plans/templates/plans/index.html
+++ b/project/plans/templates/plans/index.html
@@ -13,7 +13,7 @@
             <div class="col-lg-10">
                 <h6>Pajamų planas</h6>
             </div>
-            <div class="col-lg-2 text-right">
+            <div class="col-lg-2 text-end">
                 {% url 'plans:incomes_plan_new' as url_incomes_new %}
                 <button type="button" class="btn btn-sm btn-outline-success px-2 js-create" data-url="{% url 'plans:copy_plans' %}"><i class="bi bi-stickies"></i> Kopijuoti planus</button>
                 <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_incomes_new }}"><i class="bi bi-plus"></i>Įrašą</button>
@@ -26,7 +26,7 @@
         <!-- expenses plans -->
         <div class="row mt-2">
             <div class="col-lg-10"><h6>Išlaidų planas</h6></div>
-            <div class="col-lg-2 text-right">
+            <div class="col-lg-2 text-end">
                 {% url 'plans:expenses_plan_new' as url_expenses_new %}
                 <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_expenses_new }}"><i class="bi bi-plus"></i>Įrašą</button>
             </div>
@@ -38,7 +38,7 @@
         <!-- necessary expenses plans -->
         <div class="row mt-2">
             <div class="col-lg-10"><h6>Papildomų būtinų išlaidų planas</h6></div>
-            <div class="col-lg-2 text-right">
+            <div class="col-lg-2 text-end">
                 {% url 'plans:necessarys_plan_new' as url_necessary_new %}
                 <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_necessary_new }}"><i class="bi bi-plus"></i>Įrašą</button>
             </div>
@@ -52,7 +52,7 @@
             <div class="col-lg-10">
                 <h6>Taupymo planas</h6>
             </div>
-            <div class="col-lg-2 text-right">
+            <div class="col-lg-2 text-end">
                 {% url 'plans:savings_plan_new' as url_savings_new %}
                 <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_savings_new }}"><i class="bi bi-plus"></i>Įrašą</button>
             </div>
@@ -66,7 +66,7 @@
             <div class="col-lg-10">
                 <h6>Suma dienai</h6>
             </div>
-            <div class="col-lg-2 text-right">
+            <div class="col-lg-2 text-end">
                 {% url 'plans:days_plan_new' as url_day_new %}
                 <button type="button" class="btn btn-sm btn-outline-success pe-2 js-create" data-url="{{ url_day_new }}"><i class="bi bi-plus"></i>Įrašą</button>
             </div>
@@ -78,7 +78,7 @@
         <!-- stats plans -->
         <div class="row mt-2">
             <div class="col-lg-10"><h6>Skaičiavimai</h6></div>
-            <div class="col-lg-2 text-right"></div>
+            <div class="col-lg-2 text-end"></div>
         </div>
         <div class="row mt-2">
             <div id="plans_stats" class="col-lg-12">{{ plans_stats }}</div>
