--- a/project/core/templates/core/includes/search_form.html
+++ b/project/core/templates/core/includes/search_form.html
@@ -12,9 +12,7 @@
 
 <style>
     #search_btn {
-        padding: 0.15rem;
-        width: 3.65rem;
-        margin-top: 0.1rem!important;
+        padding: .2rem .5rem;
     }
 
     #div_id_search {
