--- a/project/plans/templates/plans/index.html
+++ b/project/plans/templates/plans/index.html
@@ -87,12 +87,7 @@
 </div>
 
 
-<!-- modal form -->
-<div class="modal fade" id="modal-form">
-    <div class="modal-dialog modal-md">
-        <div class="modal-content"></div>
-    </div>
-</div>
+{% include 'modal.html' %}
 
 <script>
     $(document).on('hidden.bs.modal', '#modal-form', function () {
