--- a/project/pensions/templates/pensions/index.html
+++ b/project/pensions/templates/pensions/index.html
@@ -30,9 +30,5 @@
     </div>
 </div>
 
-<div class="modal fade" id="modal-form">
-    <div class="modal-dialog modal-md">
-        <div class="modal-content"></div>
-    </div>
-</div>
+{% include 'modal.html' %}
 {% endblock content %}
