--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -25,8 +25,8 @@
         <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_expenses_new }}"><i class="bi bi-plus"></i> Fondų faktas</button>
         {% url 'bookkeeping:pensions_worth_new' as url_pensions_new %}
         <button type="button" class="btn btn-sm btn-outline-success js-create pe-2" data-url="{{ url_pensions_new }}"><i class="bi bi-plus"></i> Pensijos faktas</button>
-        <a class="btn btn-sm btn-outline-secondary pe-2" href="{% url 'core:regenerate_balances_current_year' year %}" data-toggle="tooltip" data-placement="top" title="Bus atnaujintas šių metų balansas."><i class="bi bi-arrow-repeat"></i> Atnaujinti {{ year|safe }} balansus</a>
-        <a class="btn btn-sm btn-outline-danger pe-2" href="{% url 'core:regenerate_balances' %}" data-toggle="tooltip" data-placement="top" title="Bus atnaujinti visų metų balansai."><i class="bi bi-arrow-repeat"></i> Atnaujinti balansus</a>
+        <a class="btn btn-sm btn-outline-secondary pe-2" href="{% url 'core:regenerate_balances_current_year' year %}" data-bs-toggle="tooltip" data-bs-placement="top" title="Bus atnaujintas šių metų balansas."><i class="bi bi-arrow-repeat"></i> Atnaujinti {{ year|safe }} balansus</a>
+        <a class="btn btn-sm btn-outline-danger pe-2" href="{% url 'core:regenerate_balances' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="Bus atnaujinti visų metų balansai."><i class="bi bi-arrow-repeat"></i> Atnaujinti balansus</a>
     </div>
 </div>
 
