--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -174,5 +174,6 @@
 
     </div>
     {% endblock body %}
+    <script type="text/javascript" src="{% static 'js/tooltip.js' %}"></script>
   </body>
 </html>
