--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -20,8 +20,8 @@ table.stats tfoot {
 table.stats td, table.stats th {
     border: 1px solid #b4b4b3!important;
     vertical-align: middle!important;
-    padding-top: .12rem!important;
-    padding-bottom: .12rem!important;
+    padding-top: .09rem!important;
+    padding-bottom: .09rem!important;
     padding-left: .20rem!important;
     padding-right: .20rem!important;
 }
@@ -258,7 +258,7 @@ tr.top-text, tr.top-text th {
 }
 
 .accordion-button {
-    padding: 0.3rem;
+    padding: 0.15rem 0.3rem;
     color: #004085;
     background-color: #9fcdff;
     border: 1px solid rgba(0,0,0,.125);
