--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -58,6 +58,11 @@
         padding-top: .35rem!important;
         padding-left: .3rem!important;
         padding-right: .3rem!important;
+        padding-bottom: 1rem!important;
+    }
+
+    td.td_expand_day_expenses table.stats {
+        margin-bottom: 0!important;
     }
 </style>
 
