--- a/project/pensions/templates/pensions/includes/pensions_type_list.html
+++ b/project/pensions/templates/pensions/includes/pensions_type_list.html
@@ -1,11 +1,10 @@
-<div class="accordion" id="accordion">
+<div class="accordion" id="accordion_p1">
     <div class="accordion-item">
-        <div class="accordion-header" id="heading_1">
+        <div class="accordion-header" id="heading_p1">
             <button class="accordion-button collapsed btn-sm rounded-top" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapse_1" aria-expanded="false" aria-controls="collapse_1">Pensijų fondai</button>
+                data-bs-target="#collapse_p1" aria-expanded="false" aria-controls="collapse_p1">Pensijų fondai</button>
         </div>
-        <div id="collapse_1" class="accordion-collapse collapse show" aria-labelledby="heading_1"
-            data-bs-parent="#accordion">
+        <div id="collapse_p1" class="accordion-collapse collapse show" aria-labelledby="heading_p1" data-bs-parent="#accordion_p1">
             <div class="accordion-body">
                 {% for item in items %}
                 {% url 'pensions:pensions_type_update' item.id as url_update %}
